--- a/Dall-e_and_GPT-vision/Vite/index.html
+++ b/Dall-e_and_GPT-vision/Vite/index.html
@@ -8,6 +8,7 @@
     <body>
         <input id="prompt" placeholder="A colorful coral reef with diverse marine life">
         <button id="generate">Generate Image</button>
+        <button id="edit">Edit / Inpainting Image</button>
         <div id="loading" style="display: none;">Loading...</div>
         <div id="results"></div>
         <script src="index.js" type="module"></script>
