all pages in index

--- a/Dall-e_and_GPT-vision/Vite/index.html
+++ b/Dall-e_and_GPT-vision/Vite/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div id="links">
+            <a href="vision.html">Go to Vision Page</a>
+            <a href="posterGenerator.html.html">Poster generation app</a>
+        </div>
         <input id="prompt" placeholder="A colorful coral reef with diverse marine life">
         <button id="generate">Generate Image</button>
         <button id="edit">Edit / Inpainting Image</button>
