--- a/OpenAI_TTS/index.html
+++ b/OpenAI_TTS/index.html
@@ -10,7 +10,7 @@
     <div>
       <button id="analyse">Convert text to audio</button>
   </div>
-  <div id="results"></div> 
+  <div id="play"></div> 
   <script src="openAI_TTS.js" type="module"></script>
   </body>
 </html>
